--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
   A simple yet classy theme for your Jekyll website or blog.
 baseurl: "/centrarium/" # the subpath of your site, e.g. /blog/
 url: "http://bencentra.com" # the base hostname & protocol for your site
-cover: "assets/header_image.jpg"
+cover: "{{bcitech.github.io}}assets/header_image.jpg"
 logo: "assets/logo.png"
 
 # Build settings
