--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gems:
 # Site settings
 title: 记忆碎片
 subtitle: "在这里填入子标题"
-email: unknown@bcitech.com
+email: question@bcitech.com
 #name: Ben Centra
 #description: > 
 #  A simple yet classy theme for your Jekyll website or blog.
